Collinearity detector in progress Progress dialog update Copyright updated